fixed error with extra larget words on small screens

--- a/public/dark.css
+++ b/public/dark.css
@@ -272,7 +272,7 @@ form > input:focus {
 }
 
 .found-word > h1 {
-    font-size: 4rem;
+    font-size: clamp(2.5rem, 5vw, 4rem);
     color: white;
 }
 
